@@ -13,6 +13,7 @@ aTunes 2.1.1
 - FIX: Device options in play list not enabled when device connected
 - FIX: Hotkeys reset after application restart [ 3421011 ]
 - FIX: Last.fm cache initialized several times
+- FIX: Context panel update called twice
 
 
 aTunes 2.1.0
